--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"additionalFooterText": "Imagens e conteúdo &copy; por tmagalhaes1985&nbsp;",
+	"additionalFooterText": "Imagens e conteúdo &copy; tmagalhaes.me&nbsp;",
 	"anchorCharacter": "#",
 	"lineBreaks": "gfm",
-	"title": "tmagalhaes1985 wiki",
+	"title": "tmagalhaes.me Wiki",
 	"useSideMenu": true
 }
